--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Cloud</a>
+      <a class="navbar-brand" href="#">Start Your Cloud</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -52,8 +52,8 @@
   <div class="container">
 
     <!-- Jumbotron Header -->
-    <header class="jumbotron my-4">
-      <h2 class="display-3">A Warm Welcome to the Cloud!</h2>
+    <header class="jumbotron my-3">
+      <h2 class="display-2">A Warm Welcome to the Cloud!</h2>
       <p class="lead">This Site gives you ideas and steps for Database Migration from the On-Prim to AWS Cloud and Microsoft Azure Cloud Platforms. DB Migration to AWS RDS Oracle Database with various Migration tools like Data Pump  Export/Import, Database Import via DB Links, AWS Database Migration Services (DMS) and Oracle GoldenGate and Migration Azure SQL Managed Database Instances.</p>
       <a href="#" class="btn btn-primary btn-lg"></a>
     </header>
@@ -87,7 +87,7 @@
       </div>
 
       <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
+        <div class="card h-75 w-75">
           <img class="card-img-top" src="AWS-DMS.png" alt="">
           <div class="card-body">
             <h4 class="card-title">DMS</h4>
