--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Github - Explore your Cloud</title>
+  <title>Github - Explore your Cloud Migration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Your Cloud</a>
+      <a class="navbar-brand" href="#">Start Your Cloud Migration</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -53,8 +53,8 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-3">
-      <h2 class="display-2">A Warm Welcome to the Cloud!</h2>
-      <p class="lead">This Site gives you ideas and steps for Database Migration from the On-Prim to AWS Cloud and Microsoft Azure Cloud Platforms. DB Migration to AWS RDS Oracle Database with various Migration tools like Data Pump  Export/Import, Database Import via DB Links, AWS Database Migration Services (DMS) and Oracle GoldenGate and Migration Azure SQL Managed Database Instances.</p>
+      <h2 class="display-2">A Warm Welcome to the Cloud Migration!</h2>
+      <p class="lead">This Site explains various methods and steps for Database Migration from the On-Prim to AWS Cloud and Microsoft Azure Cloud Platforms. DB Migration to AWS RDS Oracle Database with various Migration tools like Data Pump  Export/Import, Database Import via DB Links, AWS Database Migration Services (DMS) and Oracle GoldenGate and Migration Azure SQL Managed Database Instances.</p>
       <a href="#" class="btn btn-primary btn-lg"></a>
     </header>
 
@@ -62,7 +62,7 @@
     <div class="row text-center">
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="MSAzure.png" alt="">
+          <img class="card-img-top" src="MSAzure.png" alt="AZURE">
           <div class="card-body">
             <h4 class="card-title">Microsoft Azure</h4>
             <p class="card-text">Azure.</p>
@@ -75,7 +75,7 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="AWS.png" alt="">
+          <img class="card-img-top" src="AWS.png" alt="AWS">
           <div class="card-body">
             <h4 class="card-title">AWS</h4>
             <p class="card-text">AWS</p>
@@ -87,8 +87,8 @@
       </div>
 
       <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-75 w-75">
-          <img class="card-img-top" src="AWS-DMS.png" alt="">
+        <div class="card h-100">
+          <img class="card-img-top h-60 w-60" src="AWS-DMS.png" alt="DMS">
           <div class="card-body">
             <h4 class="card-title">DMS</h4>
             <p class="card-text">Database Migration Service.</p>
@@ -101,7 +101,7 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="GoldenGate.png" alt="">
+          <img class="card-img-top" src="GoldenGate.png" alt="GOLDENGATE">
           <div class="card-body">
             <h4 class="card-title">Oracle GoldenGate</h4>
             <p class="card-text">GoldenGate.</p>
