--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h3 class="display-3"><B>A Warm Welcome to the Cloud Migration !!! </B></h3>
-      <p class="lead">This Site explains various methods and steps for Database Migration from the On-Prim to AWS Cloud and Microsoft Azure Cloud Platforms. DB Migration to AWS RDS Oracle Database with various Migration tools like Data Pump  Export/Import, Database Import via DB Links, AWS Database Migration Services (DMS) and Oracle GoldenGate and Migration Azure SQL Managed Database Instances.</p>
+      <h4 class="display-3"><B>A Warm Welcome to the Cloud Migration !!! </B></h4>
+      <p class="card-text">This site explains various methods with steps for Database Migration from the On-Prim to AWS Cloud and Microsoft Azure Cloud Platforms. DB Migration to AWS RDS Oracle Database with various Migration tools like Data Pump  Export/Import, Database Import via DB Links, AWS Database Migration Services (DMS) and Oracle GoldenGate and Migration Azure SQL Managed Database Instances.</p>
       <a href="#" class="btn btn-primary btn-lg"></a>
     </header>
 
@@ -65,7 +65,7 @@
           <img class="card-img-top" src="MSAzure.png" alt="AZURE">
           <div class="card-body">
             <h4 class="card-title">Microsoft Azure</h4>
-            <p class="card-text">Azure.</p>
+            <p class="card-text">Azure</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -91,7 +91,7 @@
           <img class="card-img-top h-60 w-60" src="AWS-DMS.png" alt="DMS">
           <div class="card-body">
             <h4 class="card-title">DMS</h4>
-            <p class="card-text">Database Migration Service.</p>
+            <p class="card-text">Database Migration Service</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -104,7 +104,7 @@
           <img class="card-img-top" src="GoldenGate.png" alt="GOLDENGATE">
           <div class="card-body">
             <h4 class="card-title">Oracle GoldenGate</h4>
-            <p class="card-text">GoldenGate.</p>
+            <p class="card-text">GoldenGate</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
