--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="row text-center">
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="MSAzure.png" alt="AZURE">
+          <img class="card-img-top" src="/images/MSAzure.png" alt="AZURE">
           <div class="card-body">
             <h4 class="card-title">Microsoft Azure</h4>
             <p class="card-text">Azure</p>
@@ -75,7 +75,7 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="AWS.png" alt="AWS">
+          <img class="card-img-top" src="images/AWS.png" alt="AWS">
           <div class="card-body">
             <h4 class="card-title">AWS</h4>
             <p class="card-text">AWS</p>
