--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <p class="card-text">Azure</p>
           </div>
           <div class="card-footer">
-            <a href="/Docs/Steps to Connect Azure SQL MI.pdf" class="btn btn-primary">Find Out More!</a>
+            <a href="Steps to Connect Azure SQL MI.pdf" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
